--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - sudo pkmgr makecache
   - sudo pkmgr update
   - sudo bash -c "$(curl -LSs https://github.com/casjay-dotfiles/scripts/raw/master/install.sh)"
+  - bash -c "$(curl -LsS https://github.com/casjay-systems/linux/raw/master/install.sh)"
   - ./install.sh
 
 matrix:
