--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - sudo pkmgr update
   - sudo bash -c "$(curl -LSs https://github.com/casjay-dotfiles/scripts/raw/master/install.sh)"
   - bash -c "$(curl -LsS https://github.com/casjay-systems/linux/raw/master/install.sh)"
-  - ./install.sh
+  - bash -c "$HOME/.local/dotfiles/desktop/install.sh"
 
 matrix:
   include:
