--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,12 @@
 # https://docs.travis-ci.com
 
 sudo: enabled
+
+arch:
+  - amd64
+
 before_install:
-  - sudo apt-get update
+  - sudo apt-get update && sudo apt-get upgrade -yy
 
 install:
   - sudo bash -c "$(curl -LSs https://github.com/casjay-dotfiles/scripts/raw/master/install.sh)"
@@ -19,8 +23,6 @@ matrix:
       dist: focal
       language: bash
       sudo: enabled
-      arch:
-        - amd64
 
 notifications:
   email:
